add_subdirectory(partrac)
add_subdirectory(interpol)
add_subdirectory(filaments)
add_subdirectory(filaments_triangleRK4)
add_subdirectory(filaments_felbmRK4)
add_subdirectory(tracers_triangleRK4)
#add_subdirectory(spatial_strip_experimental)
add_subdirectory(spatial)

set(PROJECT_TARGETS "${PROJECT_TARGETS}" PARENT_SCOPE)