option(BUILD_APP_INTERPOL "Build interpol app" TRUE)
option(BUILD_APP_FILAMENTS "Build filaments app" TRUE)
option(BUILD_APP_FILAMENTS_TRIANGLERK4 "Build filaments_triangleRK4 app" TRUE)
option(BUILD_APP_FILAMENTS_FELBMRK4 "Build filaments_felbmRK4 app" TRUE)
option(BUILD_APP_TRACERS_TRIANGLERK4 "Build tracers_triangleRK app" TRUE)
option(BUILD_APP_TRACERVECTORS_TRIANGLERK4 "Build tracervectors_triangleRK4 app" TRUE)
option(BUILD_APP_SPATIAL "Build spatial app" TRUE)
option(BUILD_APP_TESTS "Build test apps" TRUE)

add_subdirectory(partrac)
if (BUILD_APP_INTERPOL)
    add_subdirectory(interpol)
endif()
if (BUILD_APP_FILAMENTS)
    add_subdirectory(filaments)
endif()
if (BUILD_APP_FILAMENTS_TRIANGLERK4)
    add_subdirectory(filaments_triangleRK4)
endif()
if (BUILD_APP_FILAMENTS_FELBMRK4)
    add_subdirectory(filaments_felbmRK4)
endif()
if (BUILD_APP_TRACERS_TRIANGLERK4)
    add_subdirectory(tracers_triangleRK4)
endif()
if (BUILD_APP_TRACERVECTORS_TRIANGLERK4)
    add_subdirectory(tracervectors_triangleRK4)
endif()
if (BUILD_APP_SPATIAL)
    #add_subdirectory(spatial_strip_experimental)
    add_subdirectory(spatial)
endif()
if (BUILD_APP_TESTS)
    add_subdirectory(mpitest)
endif()

set(PROJECT_TARGETS "${PROJECT_TARGETS}" PARENT_SCOPE)